plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

allprojects {
    group = 'com.spoons.popparazzi'
    version = '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        sourceCompatibility = '17'
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

// 부모 프로젝트는 실행 불가능하도록 설정
bootJar {
    enabled = false
}

jar {
    enabled = true
}